Fixed problem with My Stories not showing any stories

--- a/src/main/webapp/scss/echoed.scss
+++ b/src/main/webapp/scss/echoed.scss
@@ -1,4 +1,3 @@
-//$mainColor: #FF7733;
 $mainColor: #E31B23;
 $highlightColor : #DC0814;
 $fbColor: #3B5998;
@@ -240,7 +239,6 @@ a{
             margin-left: 10px;
             height: 40px;
             text-align:center;
-
             float:left;
         }
 
@@ -351,7 +349,7 @@ a{
                 @include drop-shadow-down;
                 background-color: #FFF;
                 .user-list-item{
-                    @include textFontBold(12px);
+                    //@include textFontBold(12px);
                     list-style: none;
                     padding: 7px 10px;
                     cursor: pointer;
@@ -401,6 +399,7 @@ a{
             @include textFontBold(13px, #FFF);
             line-height: 30px;
             text-align: left;
+            padding: 2px;
             margin: 5px;
             display: inline-block;
             border-radius: 5px;
@@ -2245,4 +2244,9 @@ h3{
     height:30px;
     background-image: image-url("bk_twitter_bird.png");
     vertical-align: middle;
+}
+
+.story-brief-overlay-edit-button{
+    @include button;
+    @include textFontBold(12px, #FFF);
 }
